[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
thiserror = "1.0.44"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
