[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.61"

[dev-dependencies]
colored = "2.1.0"
criterion = "0.5"
random_color = "0.8.0"

[[bench]]
name = "my_benchmark"
harness = false

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
rust_2018_idioms = "deny"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -10}
pedantic = "warn"
nursery = "warn"
